Add ProjectsController and TicketsController

--- a/BugTracker/Views/Admins/AllRoles.cshtml
+++ b/BugTracker/Views/Admins/AllRoles.cshtml
@@ -11,3 +11,12 @@
         <li>@role</li>
     }
 </ul>
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
