--- a/BugTracker/Views/Projects/Index.cshtml
+++ b/BugTracker/Views/Projects/Index.cshtml
@@ -14,20 +14,32 @@
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ProjectUsers)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Name)
+    </td>
+    <td>
+        @foreach (var user in item.ProjectUsers)
+        {
+            @Html.DisplayFor(modelItem => user.User.UserName)
+            <br />
+        }
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+        @Html.ActionLink("Assign User", "AssignUserToProject") |
+        @Html.ActionLink("Unassign User", "UnAssignUserFromProject", new { projectId = item.Id })
+    </td>
+</tr>
 }
 
 </table>
