--- a/BugTracker/Views/Tickets/Edit.cshtml
+++ b/BugTracker/Views/Tickets/Edit.cshtml
@@ -33,35 +33,27 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Created, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Created, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Created, "", new { @class = "text-danger" })
-            </div>
+            @Html.HiddenFor(model => model.Created)
+            @Html.Label("Created")
+            @Html.DisplayFor(model => model.Created)
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Updated, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Updated, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Updated, "", new { @class = "text-danger" })
-            </div>
+            @Html.HiddenFor(model => model.Updated)
+            @Html.Label("Updated")
+            @Html.DisplayFor(model => model.Updated)
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProjectId, "ProjectId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
-            </div>
+            @Html.HiddenFor(model => model.ProjectId)
+            @Html.Label("Project")
+            @Html.DisplayFor(model => model.Project.Name)
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.OwnerUserId, "OwnerUserId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("OwnerUserId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.OwnerUserId, "", new { @class = "text-danger" })
-            </div>
+            @Html.HiddenFor(model => model.OwnerUserId)
+            @Html.Label("Owner")
+            @Html.DisplayFor(model => model.OwnerUser.UserName)
         </div>
 
         <div class="form-group">
