--- a/BugTracker/Views/Tickets/Edit.cshtml
+++ b/BugTracker/Views/Tickets/Edit.cshtml
@@ -57,11 +57,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AssignedToUserId, "AssignedToUserId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("AssignedToUserId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.AssignedToUserId, "", new { @class = "text-danger" })
-            </div>
+            @Html.HiddenFor(model => model.AssignedToUserId)
+            @Html.Label("Assigned Developer")
+            @Html.DisplayFor(model => model.AssignedToUser.UserName)
         </div>
 
         <div class="form-group">
