--- a/BugTracker/Views/Tickets/AllTickets.cshtml
+++ b/BugTracker/Views/Tickets/AllTickets.cshtml
@@ -2,36 +2,46 @@
 
 @{
     ViewBag.Title = "AllTickets";
+    var tickets = Model;
 }
 
-<h2>AllTickets</h2>
-
+<h2>All Tickets</h2>
+      
 @if (ViewBag.Role == "Submitter")
 {
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
+    tickets = Model.Where(m => m.OwnerUserId == ViewBag.userID).ToList();
+  }
+
+@if (ViewBag.Role == "Project Manager" || ViewBag.Role == "Developer")
+{
+    <p>
+        @Html.ActionLink("View Tickets By Assigned Project", "AllTicketsByProjectForDevelopersAndProjectManagers")
+    </p>
+    tickets = Model.Where(m => m.AssignedToUserId == ViewBag.userID).ToList();
 }
 
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.AssignedToUser.Email)
+            @Html.DisplayName("Developer Email")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.OwnerUser.Email)
+            @Html.DisplayName("Submitter Email")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Project.Name)
+            @Html.DisplayName("Project Name")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TicketPriority.Name)
+            @Html.DisplayName("Ticket Priority")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TicketStatus.Name)
+            @Html.DisplayName("Ticket Status")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TicketType.Name)
+            @Html.DisplayName("Ticket Type")
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Title)
@@ -48,7 +58,7 @@
         <th></th>
     </tr>
 
-    @foreach (var item in Model)
+    @foreach (var item in tickets)
     {
         <tr>
             <td>
@@ -87,7 +97,7 @@
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
                 @if (ViewBag.Role == "Project Manager" || ViewBag.Role == "Admin")
                 {
-                    @Html.ActionLink("Assign Developer", "AssignDeveloperToTicket", new { id = item.Id }) 
+                    @Html.ActionLink("Assign Developer", "AssignDeveloperToTicket", new { id = item.Id })
                     <br />
                     @Html.ActionLink("Update Status", "UpdateStatus", new { id = item.Id })
                 }
