--- a/BugTracker/Views/Tickets/AllTickets.cshtml
+++ b/BugTracker/Views/Tickets/AllTickets.cshtml
@@ -6,12 +6,55 @@
 
 <h2>AllTickets</h2>
 
-@if (ViewBag.Role == "Submitter")
-{
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-}
+
+
+
+<div class="navigate">
+    <div class="nav1">
+        <div class="create">
+
+            @if (ViewBag.Role.Contains("Submitter"))
+            {
+                <p>
+                    @Html.ActionLink("Create New Ticket", "Create", "Tickets")
+                </p>
+            }
+            <p>
+                @Html.ActionLink("View All Tickets", "AllTickets", "Tickets")
+            </p>
+        </div>
+    </div>
+    <div class="navigate">
+        <div>
+            <button class="question" type="button"><p class="link"> @Html.ActionLink("TYPES", "SortTickets", "Tickets", new { sortBy = "type" }, new { style = "color: white;text-decoration:none" }) </p></button>
+        </div>
+        <div>
+            <button class="question" type="button"><p class="link"> @Html.ActionLink("STATUS", "SortTickets", "Tickets", new { sortBy = "status" }, new { style = "color: white;text-decoration:none" }) </p></button>
+        </div>
+        <div>
+            <button class="question" type="button"><p class="link"> @Html.ActionLink("PRIORITY", "SortTickets", "Tickets", new { sortBy = "priority" }, new { style = "color: white;text-decoration:none" }) </p></button>
+        </div>
+        <div>
+            <button class="question" type="button"><p class="link"> @Html.ActionLink("CREATION", "SortTickets", "Tickets", new { sortBy = "creation" }, new { style = "color: white;text-decoration:none" }) </p></button>
+        </div>
+        <div>
+            <button class="question" type="button"><p class="link"> @Html.ActionLink("RECENTLY UPDATED", "SortTickets", "Tickets", new { sortBy = "update" }, new { style = "color: white;text-decoration:none" }) </p></button>
+        </div>
+        <div>
+            <button class="question" type="button"><p class="link"> @Html.ActionLink("TITLE", "SortTickets", "Tickets", new { sortBy = "title" }, new { style = "color: white;text-decoration:none" }) </p></button>
+        </div>
+        <div>
+            <button class="question" type="button"><p class="link"> @Html.ActionLink("OWNER", "SortTickets", "Tickets", new { sortBy = "owner" }, new { style = "color: white;text-decoration:none" }) </p></button>
+        </div>
+        <div>
+            <button class="question" type="button"><p class="link"> @Html.ActionLink("DEVELOPER", "SortTickets", "Tickets", new { sortBy = "developer" }, new { style = "color: white;text-decoration:none" }) </p></button>
+        </div>
+        <div>
+            <button class="question" type="button"><p class="link"> @Html.ActionLink("PROJECT", "SortTickets", "Tickets", new { sortBy = "project" }, new { style = "color: white;text-decoration:none" }) </p></button>
+        </div>
+    </div>
+</div>
+
 
 <table class="table">
     <tr>
@@ -85,9 +128,9 @@
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
-                @if (ViewBag.Role == "Project Manager" || ViewBag.Role == "Admin")
+                @if (ViewBag.Role.Contains("Project Manager") || ViewBag.Role.Contains("Admin"))
                 {
-                    @Html.ActionLink("Assign Developer", "AssignDeveloperToTicket", new { id = item.Id }) 
+                    @Html.ActionLink("Assign Developer", "AssignDeveloperToTicket", new { id = item.Id })
                     <br />
                     @Html.ActionLink("Update Status", "UpdateStatus", new { id = item.Id })
                 }
