Add AllTickets method to filter tickets according to roles and update view accordingly, Add SortTickets methods to handle all types of sort cases and add navigation links for all sorting types

--- a/BugTracker/Views/Admins/ShowAllUsers.cshtml
+++ b/BugTracker/Views/Admins/ShowAllUsers.cshtml
@@ -17,14 +17,17 @@
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
-            <td>
-                <button class="question3" type="button" style="background: dodgerblue;">
-                    <p class="link"> @Html.ActionLink("ShowTheRoles", "AllRoles", new { userId = item.Id }, new { style = "color: white;text-decoration:none" }) </p>
-                </button>
-                <button class="question3" type="button" style="background: dodgerblue;">
-                    <p class="link"> @Html.ActionLink("Assign Role", "AssignUserToRole", new { userId = item.Id }, new { style = "color: white;text-decoration:none" }) </p>
-                </button>
-            </td>
+        <td>
+            <button class="question3" type="button" style="background: dodgerblue;">
+                <p class="link"> @Html.ActionLink("Get All Roles", "GetAllRolesForUser", new { style = "color: white;text-decoration:none" }) </p>
+            </button>
+            <button class="question3" type="button" style="background: dodgerblue;">
+                <p class="link"> @Html.ActionLink("Assign Role", "AssignUserToRole", new { style = "color: white;text-decoration:none" }) </p>
+            </button>
+            <button class="question3" type="button" style="background: dodgerblue;">
+                <p class="link"> @Html.ActionLink("UnAssign Role", "UnAssignUserFromRole", new { style = "color: white;text-decoration:none" }) </p>
+            </button>
+        </td>
         </tr>
 }
 
