--- a/BugTracker/Content/Site.css
+++ b/BugTracker/Content/Site.css
@@ -22,3 +22,88 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.buttonLink div {
+    background-color: #00416b;
+    border: 1px #00416b;
+    text-align: center;
+    transition: transform .5s;
+    padding: 10px 24px;
+    cursor: pointer;
+    width: 30%;
+    font-size: 20px;
+    margin-bottom: 10px;
+    display: block;
+    border-radius: 5px;
+}
+
+    .buttonLink div:not(:last-child) {
+        border-bottom: none;
+    }
+
+    .buttonLink div:hover {
+        background-color: #0084db;
+        color: white;
+        transform: scale(1.1);
+        text-decoration: none;
+    }
+
+.link {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color: white;
+    text-decoration: none;
+}
+
+.submitButton {
+    background: #462ee6;
+    padding:5px;
+    font-size:15px;
+    border-radius:5px;
+    color:white;
+}
+
+/*For Dropdown menu*/
+.dropbtn {
+    background-color: white;
+    color: #04AA6D;
+    padding: 6px;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #478f6c;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+    .dropdown-content a {
+        color: white;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+        .dropdown-content a:hover {
+            background-color: #06ba00;
+        }
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: white;
+}
