--- a/BugTracker/Views/Admins/AddRole.cshtml
+++ b/BugTracker/Views/Admins/AddRole.cshtml
@@ -9,7 +9,11 @@
     {
         <div>
             Enter Name @Html.Editor("Name") <br />
-            <input type="submit" value="Add This Role" /><br />
+            <br />
+            <button class="submitButton" type="submit">
+                Add This Role
+            </button>
+            <br />
         </div>
     }
 
