--- a/BugTracker/Views/Admins/CreateTicketType.cshtml
+++ b/BugTracker/Views/Admins/CreateTicketType.cshtml
@@ -1,21 +1,19 @@
-﻿@model BugTracker.Models.Project
+﻿@model BugTracker.Models.TicketType
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "CreateTicketType";
 }
 
-<h2>Edit</h2>
+<h2>Create TicketType</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Project</h4>
+        <h4>Ticket Type</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
-
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -24,9 +22,10 @@
             </div>
         </div>
 
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="submitButton" />
+                <input type="submit" value="Create" class="submitButton" />
             </div>
         </div>
     </div>
@@ -34,6 +33,11 @@
 
 <button class="submitButton" type="button">
     <p class="link">
-        @Html.ActionLink("Back to List", "Index", "Projects", null, new { style = "color: white;text-decoration:none" })
+        @Html.ActionLink("Back To Inedx Page", "Index", "Admins", null, new { style = "color: white;text-decoration:none" })
+    </p>
+</button>
+<button class="submitButton" type="button">
+    <p class="link">
+        @Html.ActionLink("Back To All Tickets", "AllTickets", "Tickets", null, new { style = "color: white;text-decoration:none" })
     </p>
 </button>
