--- a/BugTracker/Views/Projects/Details.cshtml
+++ b/BugTracker/Views/Projects/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            <b>Project Name: </b>
         </dt>
 
         <dd>
@@ -20,7 +20,13 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+<button class="submitButton" type="button">
+    <p class="link">
+        @Html.ActionLink("Back to List", "Index", "Projects", null, new { style = "color: white;text-decoration:none" })
+    </p>
+</button>
+<button class="submitButton" type="button">
+    <p class="link">
+        @Html.ActionLink("Edit", "Edit", "Projects", new { id = Model.Id}, new { style = "color: white;text-decoration:none" })
+    </p>
+</button>
