--- a/BugTracker/Views/Projects/Index.cshtml
+++ b/BugTracker/Views/Projects/Index.cshtml
@@ -6,40 +6,53 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+<button class="submitButton" type="button">
+    <p class="link">
+        @Html.ActionLink("Create New", "Create", "Projects", null, new { style = "color: white;text-decoration:none" })
+    </p>
+</button>
+
+<br/>
+
+<table class="table" style="margin-top:10px;font-size:15px">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            Project Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ProjectUsers)
+            Project By:
         </th>
-        <th></th>
+        <th>
+            Menu
+        </th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @foreach (var user in item.ProjectUsers)
-        {
-            @Html.DisplayFor(modelItem => user.User.UserName)
-            <br />
-        }
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
-        @Html.ActionLink("Assign User", "AssignUserToProject") |
-        @Html.ActionLink("Unassign User", "UnAssignUserFromProject", new { projectId = item.Id })
-    </td>
-</tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @foreach (var user in item.ProjectUsers)
+                {
+                    @Html.DisplayFor(modelItem => user.User.UserName)
+                    <br />
+                }
+            </td>
+            <td>
+                <div class="dropdown">
+                    <button class="dropbtn"><i class="fas fa-caret-square-down fa-2x"></i></button>
+                    <div class="dropdown-content">
+                        <a class="" href="@Url.Action("Edit", "Projects", new { id = item.Id})">Edit</a>
+                        <a class="" href="@Url.Action("Details", "Projects", new { id = item.Id})">Details</a>
+                        <a class="" href="@Url.Action("Delete", "Projects", new { id = item.Id})">Delete</a>
+                        <a class="" href="@Url.Action("AssignUserToProject", "Projects")">Assign User</a>
+                        <a class="" href="@Url.Action("UnAssignUserFromProject", "Projects", new { projectId = item.Id })">Unassign User</a>
+                    </div>
+                </div>
+            </td>
+        </tr>
+    }
 
 </table>
