--- a/BugTracker/Views/Tickets/AddAttachmentToTicket.cshtml
+++ b/BugTracker/Views/Tickets/AddAttachmentToTicket.cshtml
@@ -5,20 +5,21 @@
 
 <h2>Add Attachment To Ticket</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("AddAttachmentToTicket", "Tickets", FormMethod.Post, new{ @enctype = "multipart/form-data"}))
 {
     @Html.AntiForgeryToken()
 <div class="form-horizontal">
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div>
-        @Html.LabelFor(model => model.FilePath, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.FilePath, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.FilePath, "", new { @class = "text-danger" })
-        </div>
-    </div>
+
+    @*<div>
+            @Html.LabelFor(model => model.FilePath, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.FilePath, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FilePath, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
 
     <div>
         @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -29,16 +30,21 @@
     </div>
 
     <div>
-        @Html.LabelFor(model => model.FileUrl, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.FileUrl, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.FileUrl, "", new { @class = "text-danger" })
-        </div>
+        <input type="file" name="file" />
+        <br />
     </div>
+
+    @*<div>
+            @Html.LabelFor(model => model.FileUrl, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.FileUrl, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.FileUrl, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
     <br />
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default"/>
+            <input type="submit" value="Save" class="btn btn-default" />
         </div>
     </div>
 
